[package]
name = "erc-search"
version = "0.1.1"
edition = "2018"
authors = ["Ollivier Robert <roberto@keltia.net>"]
repository = "https://github.com/keltia/erc-search-rs"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/erc-search"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
clap = "3.0.0-beta.5"
ldap3 = "0.9"
toml = "0.5.8"
home = "0.5.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rstest = "0.11.0"
